4 am... still working on this

--- a/WADWolframAngular/src/app/entities/index.html
+++ b/WADWolframAngular/src/app/entities/index.html
@@ -4,8 +4,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <!-- Slider -->
-                        <div id="main-slider" class="main-slider flexslider">
+                        <!-- Slider 
+                        <div id="main-slider" class="main-slider flexslider">-->
                             <ul class="slides">
                                
                                 <li *ngFor="let project of projects">
@@ -17,8 +17,8 @@
                                     </div>
                                 </li>
                             </ul>
-                        </div>
-                        <!-- end slider -->
+                    <!--</div>
+                         end slider -->
                     </div>
                 </div>
             </div>
