--- a/WADWolframAngular/src/app/entities/project.html
+++ b/WADWolframAngular/src/app/entities/project.html
@@ -21,7 +21,7 @@
            <div class="row">
                <div class="col-md-6">
                   <div id="profilePhoto">
-                     <img src="https://localhost:8443/image/{{project.id}}.jpg" id="proyectImage" class="img-responsive"/>
+                     <img src="https://localhost:8443/imagep/{{project.id}}.jpg" id="proyectImage" class="img-responsive"/>
                   </div>
                </div>
                <div class="col-md-6">
