--- a/WADWolframAngular/src/app/entities/index.html
+++ b/WADWolframAngular/src/app/entities/index.html
@@ -1,4 +1,4 @@
-<section id="featured" class="bg">
+<section style="background: url(../assets/img/bodybg/bg1.png) no-repeat top center" id="featured" class="bg">
 
             <!-- start slider -->
             <div class="container">
